[package]
name = "scroll-derivation-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-eips.workspace = true
alloy-primitives = { workspace = true, default-features = false }
alloy-rpc-types-engine = { workspace = true, default-features = false }

# scroll
scroll-alloy-consensus = { workspace = true, default-features = false }
scroll-alloy-rpc-types-engine.workspace = true

# rollup node
rollup-node-primitives.workspace = true
rollup-node-providers.workspace = true
scroll-codec.workspace = true
scroll-db.workspace = true

# misc
async-trait = { workspace = true, optional = true }
futures.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
alloy-primitives = { workspace = true, features = ["getrandom"] }
criterion = { package = "codspeed-criterion-compat", version = "4.0.2", features = ["async", "async_tokio"] }
eyre.workspace = true
rollup-node-providers = { workspace = true, features = ["test-utils"] }
reth-tracing.workspace = true
reqwest.workspace = true
serde_json.workspace = true
scroll-db = { workspace = true, features = ["test-utils"] }
scroll-codec = { workspace = true, features = ["test-utils"] }
tempfile = "3.20.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["std"]
std = [
    "scroll-alloy-consensus/std",
    "scroll-alloy-rpc-types-engine/std",
    "alloy-primitives/std",
    "alloy-rpc-types-engine/std",
    "alloy-eips/std",
    "futures/std",
]

[[bench]]
name = "pipeline"
harness = false
