[package]
name = "scroll-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-chains.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true

# scroll-alloy
scroll-alloy-network.workspace = true
scroll-alloy-provider.workspace = true
scroll-alloy-rpc-types-engine = { git = "https://github.com/scroll-tech/reth.git" }

# reth
reth-payload-primitives = { git = "https://github.com/scroll-tech/reth.git" }
reth-primitives = { workspace = true }

# reth-scroll
reth-scroll-chainspec.workspace = true
reth-scroll-primitives.workspace = true
reth-scroll-engine-primitives = { git = "https://github.com/scroll-tech/reth.git", default-features = false }

# misc
async-trait = "0.1.68"
eyre.workspace = true
tokio.workspace = true
tracing.workspace = true

# test-utils
arbitrary = { version = "1.3", optional = true }

[dev-dependencies]
arbitrary = "1.3"
reth-testing-utils = { git = "https://github.com/scroll-tech/reth.git" }

[features]
arbitrary = [
    "alloy-primitives/arbitrary",
    "reth-primitives/arbitrary",
    "alloy-eips/arbitrary",
    "reth-scroll-primitives/arbitrary",
    "scroll-alloy-rpc-types-engine/arbitrary",
    "alloy-chains/arbitrary",
]
test-utils = [
    "arbitrary",
    "dep:arbitrary",
    "reth-primitives/test-utils",
]
serde = [
    "alloy-eips/serde",
    "alloy-primitives/serde",
    "alloy-rpc-types-engine/serde",
    "reth-scroll-primitives/serde",
    "scroll-alloy-rpc-types-engine/serde",
    "alloy-chains/serde",
]
