[package]
name = "scroll-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-chains.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true

# scroll-alloy
scroll-alloy-provider.workspace = true
scroll-alloy-rpc-types-engine.workspace = true

# reth
reth-network-api.workspace = true
reth-payload-primitives.workspace = true

# reth-scroll
reth-scroll-chainspec.workspace = true
reth-scroll-primitives.workspace = true
reth-scroll-engine-primitives = { git = "https://github.com/scroll-tech/reth.git", default-features = false }

# rollup-node
rollup-node-primitives.workspace = true
rollup-node-providers.workspace = true

# scroll
scroll-network.workspace = true

# misc
eyre.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
arbitrary.workspace = true
reth-testing-utils = { git = "https://github.com/scroll-tech/reth.git" }
scroll-engine = { path = "../engine", features = ["test-utils"] }

[features]
serde = [
    "alloy-eips/serde",
    "alloy-primitives/serde",
    "alloy-rpc-types-engine/serde",
    "reth-scroll-primitives/serde",
    "scroll-alloy-rpc-types-engine/serde",
    "alloy-chains/serde",
    "reth-network-api/serde",
    "scroll-network/serde",
    "scroll-engine/serde",
]
