[package]
name = "scroll-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-chains.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types-engine.workspace = true

# scroll-alloy
scroll-alloy-hardforks.workspace = true
scroll-alloy-network.workspace = true
scroll-alloy-provider.workspace = true
scroll-alloy-rpc-types-engine.workspace = true

# reth
reth-chainspec.workspace = true
reth-network-api.workspace = true
reth-payload-primitives.workspace = true
reth-primitives-traits.workspace = true

# reth-scroll
reth-scroll-chainspec.workspace = true
reth-scroll-primitives.workspace = true
reth-scroll-engine-primitives = { git = "https://github.com/scroll-tech/reth.git", branch = "feat/add-header-td", default-features = false }

# rollup-node
rollup-node-primitives.workspace = true
rollup-node-providers.workspace = true
rollup-node-signer.workspace = true

# scroll
scroll-network.workspace = true

# misc
async-trait = { workspace = true, optional = true }
eyre.workspace = true
futures.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy-consensus.workspace = true
arbitrary.workspace = true
async-trait.workspace = true
reth-testing-utils = { git = "https://github.com/scroll-tech/reth.git", branch = "feat/add-header-td", default-features = false }
rollup-node-providers = { workspace = true, features = ["test-utils"] }
scroll-alloy-consensus.workspace = true
scroll-alloy-rpc-types-engine = { workspace = true, features = ["arbitrary"] }
scroll-engine = { path = "../engine", features = ["test-utils"] }

[features]
test-utils = [
    "dep:async-trait",
    "scroll-engine/test-utils",
    "rollup-node-providers/test-utils",
    "rollup-node-providers/test-utils",
    "reth-chainspec/test-utils",
    "reth-primitives-traits/test-utils",
]
serde = [
    "alloy-eips/serde",
    "alloy-primitives/serde",
    "alloy-rpc-types-engine/serde",
    "reth-scroll-primitives/serde",
    "scroll-alloy-rpc-types-engine/serde",
    "alloy-chains/serde",
    "reth-network-api/serde",
    "scroll-network/serde",
    "scroll-engine/serde",
    "scroll-alloy-hardforks/serde",
    "reth-primitives-traits/serde",
    "alloy-consensus/serde",
    "scroll-alloy-consensus/serde",
]
