[package]
name = "l1"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
# alloy
alloy-sol-types = { version = "0.8.20", features = ["json"] }
alloy-contract = { version = "0.11.1", default-features = false }
alloy-primitives.workspace = true

# rollup-node
scroll-primitives.workspace = true

# misc
futures.workspace = true

[lints]
workspace = true
