[package]
name = "scroll-l1"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

# scroll alloy
scroll-alloy-consensus.workspace = true

# misc
arbitrary = { workspace = true, optional = true, features = ["derive"] }
bitvec.workspace = true
derive_more.workspace = true
thiserror.workspace = true

[features]
default = ["std"]
std = ["alloy-primitives/std", "scroll-alloy-consensus/std", "alloy-sol-types/std", "derive_more/std"]
test-utils = ["std", "dep:arbitrary", "alloy-primitives/arbitrary"]
