[package]
name = "manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
# reth-scroll
reth-scroll-primitives.workspace = true

# scroll
scroll-engine.workspace = true
scroll-network.workspace = true

[lints]
workspace = true
