[package]
name = "scroll-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
# alloy
alloy-primitives = { workspace = true, features = ["map-foldhash"] }

# reth
reth-eth-wire-types.workspace = true
reth-network.workspace = true
reth-network-api.workspace = true
reth-network-types = { git = "https://github.com/scroll-tech/reth.git", branch = "feat/sequencer-rn-integration" }
reth-network-peers.workspace = true
reth-storage-api = { git = "https://github.com/scroll-tech/reth.git", branch = "feat/sequencer-rn-integration" }

# scroll
reth-scroll-chainspec.workspace = true
reth-scroll-node = { workspace = true, features = ["skip-state-root-validation"] }
reth-scroll-primitives.workspace = true
scroll-wire.workspace = true

# misc
futures.workspace = true
parking_lot.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std", "recovery"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true

[features]
serde = [
    "alloy-primitives/serde",
    "parking_lot/serde",
    "reth-eth-wire-types/serde",
    "reth-network/serde",
    "reth-network-api/serde",
    "reth-network-types/serde",
    "reth-scroll-primitives/serde",
    "scroll-wire/serde",
    "secp256k1/serde",
]
