[package]
name = "scroll-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
# alloy
alloy-chains.workspace = true
alloy-primitives = { workspace = true, features = ["map-foldhash"] }

# reth
reth-eth-wire-types.workspace = true
reth-network.workspace = true
reth-network-api.workspace = true
reth-network-types = { git = "https://github.com/scroll-tech/reth.git", default-features = false }
reth-network-peers.workspace = true
reth-primitives-traits.workspace = true
reth-storage-api = { git = "https://github.com/scroll-tech/reth.git", default-features = false }

# scroll
reth-scroll-chainspec.workspace = true
reth-scroll-node.workspace = true
reth-scroll-primitives.workspace = true
scroll-wire.workspace = true

# misc
futures.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true

[features]
serde = [
    "alloy-primitives/serde",
    "parking_lot/serde",
    "reth-eth-wire-types/serde",
    "reth-network/serde",
    "reth-network-api/serde",
    "reth-network-types/serde",
    "reth-scroll-primitives/serde",
    "scroll-wire/serde",
    "reth-primitives-traits/serde",
    "reth-storage-api/serde",
    "alloy-chains/serde",
]
