[package]
name = "scroll-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
# alloy
alloy-primitives = { workspace = true, features = ["map-foldhash"] }

# reth
reth-chainspec.workspace = true
reth-eth-wire-types.workspace = true
reth-network.workspace = true
reth-network-api.workspace = true
reth-network-types.workspace = true
reth-network-peers.workspace = true
reth-primitives-traits.workspace = true
reth-storage-api.workspace = true
reth-tokio-util.workspace = true

# scroll
reth-scroll-chainspec.workspace = true
reth-scroll-node.workspace = true
reth-scroll-primitives.workspace = true
rollup-node-primitives.workspace = true
scroll-alloy-hardforks.workspace = true
scroll-wire.workspace = true

# misc
futures.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true

[features]
serde = [
    "alloy-primitives/serde",
    "parking_lot/serde",
    "reth-eth-wire-types/serde",
    "reth-network/serde",
    "reth-network-api/serde",
    "reth-network-types/serde",
    "reth-scroll-primitives/serde",
    "scroll-wire/serde",
    "reth-primitives-traits/serde",
    "reth-storage-api/serde",
    "scroll-alloy-hardforks/serde",
]
