[package]
name = "rollup-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[[bin]]
name = "rollup-node"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# async trait support
async-trait.workspace = true

# alloy
alloy-chains.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-client.workspace = true
alloy-signer-local.workspace = true
alloy-signer-aws = "1.0.30"
alloy-signer = "1.0.30"
alloy-transport.workspace = true

scroll-alloy-consensus.workspace = true
scroll-alloy-evm.workspace = true
scroll-alloy-hardforks.workspace = true
scroll-alloy-network.workspace = true
scroll-alloy-provider.workspace = true

reth-primitives-traits.workspace = true
reth-scroll-engine-primitives.workspace = true
reth-scroll-evm.workspace = true
reth-scroll-cli.workspace = true
reth-scroll-primitives.workspace = true
reth-scroll-chainspec.workspace = true
reth-scroll-node.workspace = true
reth-scroll-rpc.workspace = true

reth-chainspec.workspace = true
reth-cli-util.workspace = true
reth-eth-wire-types.workspace = true
reth-evm.workspace = true
reth-node-builder.workspace = true
reth-node-api.workspace = true
reth-node-core.workspace = true
reth-node-types.workspace = true
reth-network.workspace = true
reth-network-api.workspace = true
reth-revm.workspace = true
reth-rpc-api.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-tasks.workspace = true
reth-transaction-pool.workspace = true
reth-trie-db.workspace = true

# rollup node
rollup-node-chain-orchestrator.workspace = true
rollup-node-manager.workspace = true
rollup-node-primitives.workspace = true
rollup-node-providers.workspace = true
rollup-node-sequencer.workspace = true
rollup-node-signer.workspace = true
rollup-node-watcher.workspace = true

# AWS dependencies
aws-config = "1.8.0"
aws-sdk-kms = "1.76.0"

# test-utils
alloy-rpc-types-engine = { workspace = true, optional = true }
reth-e2e-test-utils = { workspace = true, optional = true }
reth-engine-local = { workspace = true, optional = true }
reth-provider = { workspace = true, optional = true }
reth-rpc-server-types = { workspace = true, optional = true }
scroll-alloy-rpc-types-engine = { workspace = true, optional = true }
scroll-derivation-pipeline = { workspace = true, optional = true }
scroll-alloy-rpc-types.workspace = true

scroll-db.workspace = true
scroll-engine.workspace = true
scroll-migration.workspace = true
scroll-wire.workspace = true
scroll-network.workspace = true

auto_impl.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
futures.workspace = true
jsonrpsee = { version = "0.26.0", features = ["server", "client", "macros"] }
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy-chains.workspace = true
alloy-eips.workspace = true
futures.workspace = true
reth-e2e-test-utils.workspace = true
reth-node-core.workspace = true
reth-provider.workspace = true
reth-primitives-traits.workspace = true
reth-rpc-server-types.workspace = true
reth-scroll-node = { workspace = true, features = ["test-utils"] }
reth-tasks.workspace = true
reth-tokio-util.workspace = true
reth-tracing.workspace = true
rollup-node = { workspace = true, features = ["test-utils"] }
scroll-alloy-rpc-types-engine.workspace = true
serde_json = { version = "1.0.94", default-features = false, features = ["alloc"] }
color-eyre = "0.6"
alloy-rpc-types-eth = { workspace = true }

[features]
js-tracer = ["reth-scroll-node/js-tracer", "reth-scroll-rpc/js-tracer"]
test-utils = [
    "reth-chainspec/test-utils",
    "reth-evm/test-utils",
    "reth-e2e-test-utils",
    "reth-engine-local",
    "reth-network/test-utils",
    "reth-node-builder/test-utils",
    "reth-provider/test-utils",
    "reth-revm/test-utils",
    "reth-scroll-node/test-utils",
    "reth-transaction-pool/test-utils",
    "reth-trie-db/test-utils",
    "rollup-node-providers/test-utils",
    "rollup-node-watcher/test-utils",
    "scroll-db/test-utils",
    "scroll-engine/test-utils",
    "reth-chainspec/test-utils",
    "reth-evm/test-utils",
    "reth-network/test-utils",
    "reth-node-builder/test-utils",
    "reth-provider/test-utils",
    "reth-revm/test-utils",
    "reth-scroll-node/test-utils",
    "reth-transaction-pool/test-utils",
    "reth-trie-db/test-utils",
    "rollup-node-providers/test-utils",
    "rollup-node-watcher/test-utils",
    "scroll-db/test-utils",
    "scroll-engine/test-utils",
    "rollup-node/test-utils",
    "reth-e2e-test-utils",
    "reth-rpc-server-types",
    "scroll-alloy-rpc-types-engine",
    "alloy-rpc-types-engine",
    "scroll-derivation-pipeline",
    "reth-primitives-traits/test-utils",
    "reth-primitives-traits/test-utils",
]
