[package]
name = "scroll-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
# scroll-alloy
scroll-alloy-rpc-types-engine.workspace = true

# rollup-node
scroll-primitives.workspace = true

# misc
futures.workspace = true

[lints]
workspace = true
