[package]
name = "rollup-node-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true

# scroll
scroll-alloy-consensus.workspace = true
scroll-alloy-rpc-types-engine.workspace = true

# reth
reth-scroll-primitives.workspace = true

# misc
arbitrary = { workspace = true, optional = true }
derive_more = { workspace = true, features = ["from"] }

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "alloy-rpc-types-engine/std",
    "scroll-alloy-consensus/std",
    "derive_more/std",
    "scroll-alloy-rpc-types-engine/std",
    "alloy-eips/std",
    "reth-scroll-primitives/std",
    "alloy-consensus/std",
]
arbitrary = [
    "dep:arbitrary",
    "alloy-primitives/arbitrary",
    "scroll-alloy-consensus/arbitrary",
    "alloy-eips/arbitrary",
    "scroll-alloy-rpc-types-engine/arbitrary",
    "reth-scroll-primitives/arbitrary",
    "reth-scroll-primitives/std",
    "alloy-consensus/arbitrary",
]
