[package]
name = "rollup-node-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-chains.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true

# scroll
scroll-alloy-consensus.workspace = true
scroll-alloy-rpc-types-engine.workspace = true

# reth
reth-network-peers.workspace = true
reth-primitives-traits.workspace = true
reth-scroll-primitives.workspace = true

# misc
arbitrary = { workspace = true, optional = true }
derive_more = { workspace = true, features = ["from"] }

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "alloy-rpc-types-engine/std",
    "scroll-alloy-consensus/std",
    "derive_more/std",
    "scroll-alloy-rpc-types-engine/std",
    "alloy-eips/std",
    "reth-scroll-primitives/std",
    "reth-primitives-traits/std",
    "alloy-consensus/std",
    "alloy-chains/std",
]
arbitrary = [
    "std",
    "dep:arbitrary",
    "alloy-primitives/arbitrary",
    "scroll-alloy-consensus/arbitrary",
    "alloy-eips/arbitrary",
    "scroll-alloy-rpc-types-engine/arbitrary",
    "reth-scroll-primitives/arbitrary",
    "reth-scroll-primitives/std",
    "reth-primitives-traits/arbitrary",
    "alloy-consensus/arbitrary",
    "alloy-rpc-types-engine/arbitrary",
    "alloy-chains/arbitrary",
]
