[package]
name = "rollup-node-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-eips = { workspace = true, features = ["kzg"] }
alloy-primitives.workspace = true
alloy-rpc-types-beacon = "0.13"
alloy-rpc-types-engine.workspace = true
alloy-serde = { version = "0.13.0", default-features = false }

# scroll
scroll-alloy-consensus.workspace = true
scroll-db.workspace = true

# rollup-node
rollup-node-primitives.workspace = true

# misc
async-trait.workspace = true
auto_impl.workspace = true
lru = "0.13.0"
reqwest = { workspace = true, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, default-features = false }

[dev-dependencies]
eyre.workspace = true
scroll-db = { workspace = true, features = ["test-utils"] }
tokio = { workspace = true, features = ["macros"] }

[features]
test-utils = ["scroll-db/test-utils"]
