[package]
name = "scroll-wire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
reth-eth-wire = { git = "https://github.com/scroll-tech/reth.git" }
reth-primitives.workspace = true
alloy-primitives = { workspace = true, features = [
    "map-foldhash",
] }
alloy-rlp = { version = "0.3.10", default-features = false }
tokio = { version = "1.39", default-features = false, features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
reth-network.workspace = true
reth-network-api.workspace = true
reth-provider = { workspace = true, features = ["test-utils"] }
reth-scroll-chainspec.workspace = true
eyre = "0.6"
secp256k1 = { version = "0.29", default-features = false, features = [
    "global-context",
    "recovery",
] }
tracing = "0.1.0"
