[package]
name = "scroll-wire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-primitives = { workspace = true, features = ["map-foldhash"] }
alloy-rlp = { version = "0.3.10", default-features = false }

# reth
reth-eth-wire = { git = "https://github.com/scroll-tech/reth.git", rev = "499e9ae7e9bc4b63f72a25d2d48bab5c0e15a51d", default-features = false }
reth-network.workspace = true
reth-network-api.workspace = true

# scroll
reth-scroll-primitives = { workspace = true }

# misc
futures.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true

[features]
serde = [
    "alloy-primitives/serde",
    "reth-eth-wire/serde",
    "reth-network/serde",
    "reth-network-api/serde",
    "reth-scroll-primitives/serde",
]
