[package]
name = "rollup-node-sequencer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true

# scroll-alloy
scroll-alloy-provider.workspace = true
scroll-alloy-rpc-types-engine.workspace = true

# rollup-node
scroll-db = { workspace = true }
rollup-node-providers.workspace = true
rollup-node-primitives.workspace = true

# misc
futures.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
# alloy
alloy-consensus.workspace = true
alloy-primitives.workspace = true

# scroll-alloy
scroll-alloy-consensus.workspace = true

# reth
reth-e2e-test-utils.workspace = true
reth-node-core.workspace = true
reth-tracing = { git = "https://github.com/scroll-tech/reth.git" }

# reth-scroll
reth-scroll-chainspec.workspace = true
reth-scroll-node = { workspace = true, features = ["test-utils"] }

# rollup-node
rollup-node = { workspace = true, features = ["test-utils"] }
rollup-node-primitives.workspace = true
rollup-node-providers = { workspace = true, features = ["test-utils"] }
rollup-node-sequencer.workspace = true
scroll-db = { workspace = true, features = ["test-utils"] }
scroll-engine.workspace = true

# misc
futures.workspace = true
